# lambda-handler

./: .bumpversion.cfg  README.md  mkdocs.yml  pyproject.toml
docs/: event_models.md  handler.md  index.md
lambda_handler/: __init__.py  dependencies.py  handler.py  types.py  utils.py
lambda_handler/model/: __init__.py  base.py  direct_invocation.py  event_bridge.py  s3.py  sns.py  sqs.py
test/: test_direct_invocation.py  test_fastapi.py  test_s3.py  test_sns.py  test_sqs.py  test_utils.py
test/events/: __init__.py  directInvocation.json  directInvocationModel.json  s3Event.json  snsEvent.json  snsEventAnother.json  snsEventBad.json  snsEventModel.json  sqsEvent.json
